// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ServerSettingsForm /> should render form 1`] = `
<div>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <h2
      class="mb-3"
    >
      Server Settings
    </h2>
    <p>
      Please note that you need a public (preferably static) IP address and your network configured to make use of a VPN server.
    </p>
    <form>
      <div
        class="form-check form-switch mb-3"
      >
        <input
          checked=""
          class="form-check-input"
          id="1"
          role="switch"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="1"
        >
          Enable Server
        </label>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="2"
        >
          Device
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            disabled=""
            id="2"
            type="text"
            value="my_device"
          />
        </div>
      </div>
      <div
        class="form-check form-switch mb-3"
      >
        <input
          class="form-check-input"
          id="3"
          role="switch"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="3"
        >
          Listen on IPv6
        </label>
        <div
          class="form-text"
        >
          <small>
            Useful if you don't have public IPv4 address. Disable if your IPv6 connection is broken.
          </small>
        </div>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="4"
        >
          Protocol
        </label>
        <select
          class="form-select"
          id="4"
        >
          <option
            value="udp"
          >
            UDP
          </option>
          <option
            value="tcp"
          >
            TCP
          </option>
        </select>
        <div
          class="form-text"
        >
          <small>
            Clients will connect to the VPN server via this protocol. Use TCP if your ISP blocks UDP.
          </small>
        </div>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="5"
        >
          VPN network address
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="5"
            type="text"
            value="10.111.111.0"
          />
        </div>
        <div
          class="form-text"
        >
          <small>
            This network should be different than any network directly reachable by the router and the clients.
          </small>
        </div>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="6"
        >
          VPN network mask
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="6"
            type="text"
            value="255.255.255.0"
          />
        </div>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="7"
        >
          Port
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            disabled=""
            id="7"
            type="text"
            value="1194"
          />
        </div>
      </div>
      <div
        class="form-check form-switch mb-3"
      >
        <input
          checked=""
          class="form-check-input"
          id="8"
          role="switch"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="8"
        >
          Route all traffic via VPN
        </label>
        <div
          class="form-text"
        >
          <small>
            Clients will access the Internet via VPN
          </small>
        </div>
      </div>
      <div
        class="form-check form-switch mb-3"
      >
        <input
          checked=""
          class="form-check-input"
          id="9"
          role="switch"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="9"
        >
          Use DNS via VPN
        </label>
        <div
          class="form-text"
        >
          <small>
            Clients will resolve addresses using router's DNS. Required when accessing local servers like my-nas.lan
          </small>
        </div>
      </div>
      <div
        class="text-end"
      >
        <button
          class="btn btn-primary col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
          type="submit"
        >
          <span>
            Save
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`<ServerSettingsForm /> should render form partially when disabled 1`] = `
<div>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <h2
      class="mb-3"
    >
      Server Settings
    </h2>
    <p>
      Please note that you need a public (preferably static) IP address and your network configured to make use of a VPN server.
    </p>
    <form>
      <div
        class="form-check form-switch mb-3"
      >
        <input
          class="form-check-input"
          id="1"
          role="switch"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="1"
        >
          Enable Server
        </label>
      </div>
      <div
        class="text-end"
      >
        <button
          class="btn btn-primary col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
          type="submit"
        >
          <span>
            Save
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;
